Added handler for buildaliassetter plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -224,6 +224,7 @@ jenkins_jobs.triggers =
     timed=jenkins_jobs.modules.triggers:timed
 jenkins_jobs.wrappers =
     ansicolor=jenkins_jobs.modules.wrappers:ansicolor
+    buildaliassetter=jenkins_jobs.modules.wrappers:buildaliassetter
     build-name=jenkins_jobs.modules.wrappers:build_name
     build-user-vars=jenkins_jobs.modules.wrappers:build_user_vars
     ci-skip=jenkins_jobs.modules.wrappers:ci_skip
