--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ jenkins_jobs.modules =
     publishers=jenkins_jobs.modules.publishers:Publishers
     reporters=jenkins_jobs.modules.reporters:Reporters
     scm=jenkins_jobs.modules.scm:SCM
+    dsl=jenkins_jobs.modules.pipeline:DSL
     triggers=jenkins_jobs.modules.triggers:Triggers
     wrappers=jenkins_jobs.modules.wrappers:Wrappers
     zuul=jenkins_jobs.modules.zuul:Zuul
