--- a/.jjb.yml
+++ b/.jjb.yml
@@ -17,7 +17,25 @@
     node: treebox
 
     display-name: 'Jenkins Job Builder [openstack]'
-    description: "OpenStack's Jenkins Job Builder [JJB], test run and coverage report."
+    description: |
+      <p>OpenStack's Jenkins Job Builder [JJB], test run and coverage report 
+      (requires shiningpanda plugin).<p>
+      <p>
+        Part of <code class="muted">dotmpe/jenkins-job-builder</code>,
+        <code>.jjb.yml</code>.
+      </p>
+
+    parameters:
+    - bool:
+        name: Build_Skip_Workspace_Delete
+        description: |
+          Don't drop the workspace with checkout at the end of the job (for 
+          inspection or faster rebuilds).
+        default: false
+    - bool:
+        name: DEBUG
+        description: Be more verbose on stdout/stderr.
+        default: false
 
     logrotate:
       daysToKeep: -1
@@ -42,6 +60,7 @@
 
     builders:
     - shell: tox -e cover
+    #- shell: coverage html
 
     wrappers:
     - timestamps
@@ -150,20 +169,33 @@
         xml:
           <jenkins.plugins.shiningpanda.publishers.CoveragePublisher plugin="shiningpanda@0.22"/>
 
+    - archive:
+        artifacts: "$BUILD_DIR/**/*,config/**/*"
+        description: One instance allowed. Moves the files to builds/BUILD_NUMBER/archive/. Pattern can include plain ENV vars.
+        allow-empty: false
+
     # Remove entire workspace dir after building
-    - raw:
-        xml:
-          <hudson.plugins.ws__cleanup.WsCleanup plugin="ws-cleanup@0.28">
-            <deleteDirs>false</deleteDirs>
-            <skipWhenFailed>false</skipWhenFailed>
-            <cleanWhenSuccess>true</cleanWhenSuccess>
-            <cleanWhenUnstable>true</cleanWhenUnstable>
-            <cleanWhenFailure>true</cleanWhenFailure>
-            <cleanWhenNotBuilt>true</cleanWhenNotBuilt>
-            <cleanWhenAborted>true</cleanWhenAborted>
-            <notFailBuild>false</notFailBuild>
-            <cleanupMatrixParent>false</cleanupMatrixParent>
-            <externalDelete/>
-          </hudson.plugins.ws__cleanup.WsCleanup>
+    - conditional-publisher:
+        - condition-kind: shell
+          condition-command: |
+            . $scriptpath/lib/main.sh
+            trueish "$Build_Skip_Workspace_Delete" \
+              && {{ note "Skipping Workspace delete"; exit 1; }} \
+              || exit 0
+          action:
+            - raw:
+                xml:
+                  <hudson.plugins.ws__cleanup.WsCleanup plugin="ws-cleanup@0.28">
+                    <deleteDirs>false</deleteDirs>
+                    <skipWhenFailed>false</skipWhenFailed>
+                    <cleanWhenSuccess>true</cleanWhenSuccess>
+                    <cleanWhenUnstable>true</cleanWhenUnstable>
+                    <cleanWhenFailure>true</cleanWhenFailure>
+                    <cleanWhenNotBuilt>true</cleanWhenNotBuilt>
+                    <cleanWhenAborted>true</cleanWhenAborted>
+                    <notFailBuild>false</notFailBuild>
+                    <cleanupMatrixParent>false</cleanupMatrixParent>
+                    <externalDelete/>
+                  </hudson.plugins.ws__cleanup.WsCleanup>
 
 
